	PR c++/34269 	* parser.c (cp_parser_simple_declaration): Don't commit 	to tentative parse if parse errors were seen.

* g++.dg/cpp0x/decltype13.C: New test.
	* g++.dg/cpp0x/decltype-33837.C: Adjust dg-error pattern.
	* g++.dg/cpp0x/pr33839.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141793 138bc75d-0d04-0410-961f-82ee72b054a4